# xlogin

./: ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  defconfig.h  getpass.c  main.c  vfuncs.c
xlogin/: Xsession  Xsession-arch  lxderc  lxderc_o  xclientsrc  xlogin.conf  xloginrc
